...
                android:textAlignment="center"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/title_muscle_group"
                app:layout_constraintTop_toBottomOf="@+id/title_muscle_group" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/muscle_select_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...
