...
<!--                app:layout_constraintEnd_toEndOf="@+id/view19"-->
<!--                app:layout_constraintStart_toStartOf="@+id/view19"-->
<!--                app:layout_constraintTop_toTopOf="@+id/view19" />-->


            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_self_training"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="102dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
...
