<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/gym"
        android:title=""/>

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/wellness"
        android:title=""/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/list"
        android:title=""/>

    <item
        android:id="@+id/navigation_analysis"
        android:icon="@drawable/graph"
        android:title=""/>
</menu>